next stab at putting infrastucture up; included references.bib, installed citr and rcrossref; rcrossref allows to add bib file based on DOIs

--- a/paper.Rmd
+++ b/paper.Rmd
@@ -5,6 +5,7 @@ date: "2/23/2019"
 output:
   word_document: default
   html_document: default
+  
 ---
 
 ```{r setup, include=FALSE}
@@ -34,6 +35,9 @@ contribution
 ```
 
 # Background
+
+Runway configurations are given in the following notation: (R1,R1 | R2) [@avery_2015; @ramanujam_2015]. 
+The runway configuration can also play an essential role in the recovery from disruptions [@koelle_2015].
 
 # Method / Approach
 
