--- a/references_icns_2019.bib
+++ b/references_icns_2019.bib
@@ -16,6 +16,18 @@
   publisher={IEEE}
 }
 
+@article{jankovec_2018,
+  title={The airport capacity crunch is more than just an aviation challenge},
+  author={Jankovec, Olivier},
+  journal={EUROCONTROL Skyway Insight},
+  volume={69},
+  pages={24--27},
+  year={2018},
+  publisher={EUROCONTROL},
+  url = {https://www.eurocontrol.int/publications/skyway-no-69-autumnwinter-2018}
+}
+
+
 @inproceedings{koelle_2015,
 	doi = {10.1109/icnsurv.2015.7121296},
 	url = {https://doi.org/10.1109%2Ficnsurv.2015.7121296},
@@ -26,4 +38,6 @@
 	title = {Operational resilience performance of European airports},
 	booktitle = {2015 Integrated Communication, Navigation and Surveillance Conference ({ICNS})}
 }
+
+
 
