--- a/references_icns_2019.bib
+++ b/references_icns_2019.bib
@@ -39,5 +39,10 @@
 	booktitle = {2015 Integrated Communication, Navigation and Surveillance Conference ({ICNS})}
 }
 
-
+@article{mota_etal_2017,
+  title={Time to Sweat the Assets?},
+  author={Mota, Miguel Mujica and Boosten, Geert and Zuniga, Catya},
+  year={2017},
+  publisher={OECD}
+}
 
