--- a/references_icns_2019.bib
+++ b/references_icns_2019.bib
@@ -46,3 +46,9 @@
   publisher={OECD}
 }
 
+@article{growthchallenge_2018,
+  title={Challenges to growth, European Aviation in 2040},
+  author={EUROCONTROL},
+  year={2018},
+  publisher={EUROCONTROL}
+}
